# PL_0

./: CMakeLists.txt  main.cpp
Common/: Error.cpp  Error.h
Common/include/: Error.h  Token.h  TokenType.h
Common/src/: Error.cpp  Token.cpp  TokenType.cpp
LexicalAnalysis/include/: Lexer.h  Statechart.h
LexicalAnalysis/src/: Lexer.cpp  Statechart.cpp
SyntacticAnalysis/include/: Instruction.cpp  Instruction.h  Parser.h  Symbol.cpp  Symbol.h
SyntacticAnalysis/src/: Parser.cpp
